
  [ Frans Pop ]
  * hppa: change test for SMP support to use /var/numcpus which is created
    by rootskel (from version 1.59); the current test does not work as it
    requires the D-I kernel to have SMP support, which it hasn't.
    Thanks to Grant Grundler for his suggestions.
  * powerpc: correctly recognize systems with 'RS64-IV (sstar)' cpu as
    powerpc64 (closes: #469030).

 -- Frans Pop <fjp@debian.org>  Fri, 07 Mar 2008 12:37:42 +0100

base-installer (1.88) unstable; urgency=low

  [ Joey Hess ]
  * Demote Transmeta Crusoe systems to use the 486 kernel.
    Based on #464962, Crusoe lacks support for a long NOP instruction,
    which gcc has begun using when optimising for the 686.

  [ Updated translations ]
  * Finnish (fi.po) by Esko Arajärvi
  * Hindi (hi.po) by Kumar Appaiah
  * Indonesian (id.po) by Arief S Fitrianto
  * Turkish (tr.po) by Recai Oktaş
  * Traditional Chinese (zh_TW.po) by Tetralet

 -- Otavio Salvador <otavio@debian.org>  Fri, 15 Feb 2008 10:48:39 -0200

base-installer (1.87) unstable; urgency=low

  [ Christian Perrier ]
  * Add a dependency on ${misc:Depends} for base-installer so that it
    depends properly on debconf.

  [ Aurelien Jarno ]
  * Add support for the MIPS Malta platform.

  [ Colin Watson ]
  * Silence syslog noise if /usr/lib/base-installer.d or
    /usr/lib/post-base-installer.d is empty.

  [ Frans Pop ]
  * Whitespace cleanup: reduce indentation in kernel selection scripts.
  * Update kernel tests for i386 and powerpc.
  * Change kernel usability tests for all arches so that by default any
    postfix is allowed, but only when separated from the flavor by a hyphen.
    This allows both standard postfixes (e.g. -smp) postfixes for custom built
    images, and is used to support updated kernel meta packages for stable.
  * mips/mipsel: allow fallback to 4kc-malta kernel for 5kc-malta.
  * Add hack that allows default selection of kernel meta packages with a