@@ -359,3 +359,13 @@ Template: base-installer/section/install_kernel_package
 Type: text
 # SUBST0 is a package name
 _Description: Installing the kernel - retrieving and installing ${SUBST0}...
+
+Template: base-installer/includes
+Type: string
+Description: for internal use; can be preseeded
+ Packages to be included in base installation
+
+Template: base-installer/excludes
+Type: string
+Description: for internal use; can be preseeded
+ Packages to be excluded in base installation
