@@ -12,6 +12,12 @@ base-installer (1.89) UNRELEASED; urgency=low
   * powerpc: correctly recognize systems with 'RS64-IV (sstar)' cpu as
     powerpc64 (closes: #469030).
 
+  [ Otavio Salvador ]
+  * Add facility to include and exclude packages from the base system by
+    preseeding base-installer/includes and base-installer/excludes. Adding
+    packages using base_include and base_include CD files still works and
+    the packages are added to the preseeded ones.
+
  -- Frans Pop <fjp@debian.org>  Fri, 07 Mar 2008 12:37:42 +0100
 
 base-installer (1.88) unstable; urgency=low
